fix: mudar para o tsx (uma ferramenta mais moderna e robusta para rodar TypeScript/ESM)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sistema de RPG e Batalha automatizado para Discord, com temática de pirataria, focado na comunidade do servidor.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -31,6 +31,7 @@
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
